--- a/QGL_Math/QGL_Math.vcxproj
+++ b/QGL_Math/QGL_Math.vcxproj
@@ -162,6 +162,8 @@
     <ClInclude Include="include\qgl_math_includes.h" />
     <ClInclude Include="include\qgl_rational.h" />
     <ClInclude Include="include\qgl_tile_helpers.h" />
+    <ClInclude Include="include\Random\qgl_name_generator.h" />
+    <ClInclude Include="include\Random\qgl_random_helpers.h" />
     <ClInclude Include="include\Shapes\qgl_aabb_helpers.h" />
     <ClInclude Include="include\Shapes\qgl_boundary.h" />
     <ClInclude Include="include\Shapes\qgl_dx_comparators.h" />
